- XLS export arabic chars problem in ListOutput.fnc.php
- All Course periods in Student Summary
- Move Grade Level to Enrollment.inc.php
- Reorganize Student/User General Info tables
- $DefaultSyear & $RosarioLocales checks in diagnostic.php
- Update french & spanish translations
- Fix SQL bug invalid numeric data in Courses.php
- Add cache killer to warehouse.js + stylesheet.css in Warehouse.php

Upgrade from 2.6.x
------------------
- Flush the functions/ & ProgramFunctions/ folders
- Delete the modules/Moodle/ & modules/Reports/ folders
- Extract the 2.7 files
- Execute the SQL commands, see https://gist.github.com/francoisjacquet/eee136a8431b704646dc
- You can safely remove the following variables from the config.inc.php file (see new config.inc.sample.php file for comparison):
	- $RosarioAdmins
	- $RosarioModules
	- MOODLE_INTEGRATOR
- (Re)activate the Moodle integrator via: School Setup > School Configuration > Plugins
- Note: all the modules coming with RosarioSIS will be activated
- Activate/deactivate modules via: School Setup > School Configuration > Modules
- Note2: if you have custom modules, reactivate them:
	- Please rename first the install.sql file in your module directory (if any). (This will prevent automatic installation when reactivated.)


Changes in 2.6.6
----------------
- Fix PHP notices undefined index in index.php
- Display error if no quarters in Side.php & GetMP.php
- Force login vars to POST in index.php
- Bugfix SQL error column "subject_id" specified more than once in Courses.php
- Bugfix illegal offset when adding user/student in new school in Other_info.inc.php
- Bugfix Student enrollment saved for new students when error in Student.php & Enrollment.inc.php
- Move fix SQL bug FIRST_NAME, LAST_NAME is null up in User.php & Student.php
- No 'N/A' for Grade Level select input in General_Info.inc.php
- Fix Attendance Summary calendar gen for Full Year over 2 years


Changes in 2.6.5
----------------