@@ -3454,6 +3454,7 @@ INSERT INTO config VALUES (0, 'THEME', 'WPadmin');
 INSERT INTO config VALUES (1, 'SCHOOL_SYEAR_OVER_2_YEARS', 'Y');
 INSERT INTO config VALUES (1, 'ATTENDANCE_FULL_DAY_MINUTES', '300');
 INSERT INTO config VALUES (1, 'STUDENTS_USE_MAILING', NULL);
+INSERT INTO config VALUES (1, 'CURRENCY', '$');
 
 
 --
